cluster/apps/securo/securo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securo
  namespace: securo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
    external-dns/is-public: "true"
    external-dns.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "securo.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: securo-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: securo-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - "securo.${SECRET_DOMAIN}"
